[gd_scene load_steps=2 format=3 uid="uid://bvsrhnrd1kp5h"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_nevkm"]

[node name="enemy" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_nevkm")

[node name="idle_sprite" type="Sprite2D" parent="."]

[node name="idle_attack_sprite" type="Sprite2D" parent="."]
visible = false

[node name="walk_sprite" type="Sprite2D" parent="."]
visible = false

[node name="collider" type="CollisionShape2D" parent="."]

[node name="navigation" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 5.0
path_postprocessing = 1
avoidance_enabled = true
radius = 20.0
time_horizon_agents = 0.0

[node name="path_calculation" type="Timer" parent="."]
wait_time = 0.5
autostart = true
